--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@
 			<div class="row center-xs">
 				<div class="grid__item col-xs-11 col-md-12">
 					<div class="quote__wrapper">
-						<blockquote class="quote__text quote__text1">WAIT TILL YOU SEE V3...</blockquote>
-						<blockquote class="quote__text quote__text2 clr-txt2"> "AI" WAS THE EASY PART</blockquote>
+						<blockquote class="quote__text quote__text1">XTENDED REALITY</blockquote>
+						<blockquote class="quote__text quote__text2 clr-txt2">XTRAPOLATED REALITY</blockquote>
 					</div>
 					<!-- <p class="price upper">LIEKE ON FACEBOOK</p>		</div> -->
 				</div>
