--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0019)https://thegrid.io/ -->
 <html lang="en" style="" class=" csscalc supports no-touchevents lastchild nthchild cssvwunit cssvhunit cssmask csstransforms csstransitions csstransforms3d"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,7 @@
 
 	<meta name="theme-color" content="#ffffff">
 
-	<link href="https://thegrid.io/favicon.ico" rel="shortcut icon">
+	<link href="./Stonedrum icon.png" rel="shortcut icon">
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="./app.min.css">
@@ -491,7 +490,7 @@
 				<div class="page-hero__details grid__item col-xs-12 col-md-6 col-lg-19-48 grid--no-padding--mmd grid--no-padding-bottom">
 					<div class="grid--padding">
 						<div class="page-hero__breadcrumb ">
-							<p class="link upper">THE</p>
+							<p class="link upper">SOUND OF THE UNSOUNDING</p>
 							<!-- <span class="icon arrow-right"></span> -->
 							<p class="link upper">GRID</p>
 						</div>
@@ -597,7 +596,7 @@
 		</div> -->
 
 					<div class="about-image-text__copy grid__item col-xs-12 col-md-3 grid--padding grid--no-edge--md col-md-offset-8">
-						<p>Contact Stonedrum at info@stonedrum.co </p>
+						<p>info@stonedrum.co </p>
 					</div>
 
 				</div>
