--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
 		.bld {
 			font-style: bold;
 			font-weight: 800;
+			font-size: 48px;
+			line-height: 72px;
 		}
 
 		@media only screen and (min-width: 1200px) {
@@ -478,6 +480,7 @@
 					<div class="intrinsic header-media" data-component="lazy" data-imgsrc="[{}]"></div>
 
 					<div class="hero-caption caption col-xs-12 col-md-4 col-lg-2 hide--till-s">
+						<!-- 
 						<p class="hero-caption__title small medium">
 							<span class="icon arrow-down"></span>
 						</p>
@@ -487,6 +490,7 @@
 						<p class="hero-caption__title small medium">
 							<span class="icon arrow-down"></span>
 						</p>
+						-->
 						<!-- <span class="hero-caption__text small">xxxx <a href="">xxxx</a> design.</span> -->
 					</div>
 				</div>
@@ -530,6 +534,7 @@
 						<div class="text-wrap clr-txt2 bld">
 							<p class="small medium"></p>
 							<p class="hide--from-s hide-in-overlay"></p>
+							<!--
 							<p class="small hide--till-s show-in-overlay">xxxxxxx<br>
 								<br>
 								<br>
@@ -545,6 +550,7 @@
 								xxxxxxx<br>
 								xxxxxxx<br>
 								xxxxxxx</p>
+							-->
 						</div>
 					</div>
 				</div>
