--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 		}
 
 		.bld {
-			font-style: bold;
-			font-weight: 800;
+			font-style: normal;
+			font-weight: 200;
 			font-size: 48px;
 			line-height: 72px;
 		}
