--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Interactive Landscape | Demo 3 | Codrops</title>
-		<meta name="description" content="An interactive animated landscape built with three.js" />
-		<meta name="keywords" content="three.js, javascript, webgl, animation, landscape, interactive, demo" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="favicon.ico">
+		<title>Stonedrum XR</title>
+		<meta name="description" content="" />
+		<meta name="keywords" content="Stonedrum, AR, VR, XR, augmented reality, interactive" />
+		<meta name="author" content="" />
+		<link rel="shortcut icon" href="Stonedrum icon.png">
 		<link href="https://fonts.googleapis.com/css?family=Barlow:400,800" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
